lab5/test/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character
    6 |    string s = "abc;
      |               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    7 |    char c = 'a;
      |             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    8 |    s = "abcd\";
      |        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    9 |    s = "abc|\
      |        ^
à›h^U:5.15: invalid token ("\*/")
à›h^U:5.20: syntax error, unexpected ';'
à›h^U:6.15: invalid token ("abc;)
à›h^U:7.9: syntax error, unexpected TOK_IDENT
à›h^U:7.13: invalid token ('a;)
à›h^U:8.8: invalid token ("abcd\";)
à›h^U:9.8: invalid token ("abc|   ;)
à›h^U:11.8: invalid token (23foobar)
